@@ -2,6 +2,8 @@
 
 	* Makefile.am: Move functab4 into shlib tests, since it uses
 	@load. Thanks to Anders Wallin for the report.
+	(shlib-tests): Check --version output for "API" and run tests
+	if there.
 
 2013-01-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
