@@ -3,6 +3,8 @@
 	* dfa.c: Include "dfa.h" which includes regex.h after limits.h
 	so that RE_DUP_MAX gets the correct value. Especially needed on
 	OpenVMS. Thanks to Anders Wallin.
+	* main.c (version): Print out API version numbers if DYNAMIC.
+	Helpful also for knowing if to run the shlib tests.
 
 2013-01-31         Arnold D. Robbins     <arnold@skeeve.com>
 
